# labs-osi-floryajulya

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
lab2/: CMakeLists.txt  image.pgm  main.cpp
lab2/include/: medianFilter.h
lab2/src/: medianFilter.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: parent.h
lab3/src/: child.cpp  parent.cpp
tests/: CMakeLists.txt  lab2test.cpp  lab3_test.cpp
